added simple validation for enrollment on API side